# dilithium

./: Cargo.toml  README.md  build.rs
ref/: poly.h  randombytes.c
src/: bindings.rs  lib.rs
