[package]
name = "libdilithium-sys"
version = "0.1.0"
links = "dilithium"
build = "build.rs"
edition = "2021"
license = "CC0-1.0"
description = "Bindings for the C implementation of the Dilithium signature scheme."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = "0.59.2"

[build-dependencies]
bindgen = "0.59.2"
cc = { version = "1.0", features = ["parallel"] }
